Added in a url for the kits on the mobile nav

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -182,6 +182,15 @@
               Pregnancy
             </a>
           </div>
+          <div class="mobile-navigation-menu__item">
+            <a
+              href="{{ collections.kits-gifts.url }}"
+              data-id="Kits-gifts"
+              class="mobile-navigation-menu__item__link mobile-navigation-menu__item__link--small animate-white-to-green {% if link.active %}mobile-navigation-menu__item__link--current{% endif %}"
+            >
+              Kits & Gifts
+            </a>
+          </div>
         {% endif %}
       {% endif %}
     {%- endfor %}
