Updated the product page to have 2 new content blocks

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -181,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       data-theme="{{ collection.title | downcase | replace: " ", "-" }}"
     {%- endif -%}
     {%- if request.page_type == 'list-collections' -%}
-      data-theme="postpartum"
+      data-theme="pregnancy"
     {%- endif -%}
 
     {%- if request.page_type == 'product' -%}
