--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -15,7 +15,7 @@
 
   {% render 'grid-slide' %}
 
-  {% assign ordered_collections = 'postpartum,v-delivery,c-section-delivery,pregnancy,breast-care' | split: ',' %}
+  {% assign ordered_collections = 'pregnancy,postpartum,v-delivery,c-section-delivery,kits-gifts,breast-care' | split: ',' %}
 
   <div class="collection-grid__list">
     {% for ordered_handle in ordered_collections %}
