--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -8,78 +8,119 @@
 <div class="product">
   <div class="product-wrap">
     <div class="product-gallery">
-      <div class="product-slider [ js-product-imagery-slider ]">
-        {% for media in product.media %}
-          <div class="product-slider-item">
-            {% comment %} if first image {% endcomment %}
-            {% if forloop.first %}
-              <div class="product-slider-item-endorsement">
-                <img src="{{ 'plunket_logo.svg' | asset_url }}" loading="lazy" width="200" height="200">
+      <div class="product-gallery-left">
+        <div class="product-nav">
+          <div class="product-nav-slider [ js-product-nav-imagery-slider ]">
+            <section class="splide" id="thumbnail-slider">
+              <div class="splide__track">
+                <ul class="splide__list">
+                  {% for media in product.media %}
+                    <li class="splide__slide product-nav-slider-item">
+                      <img
+                        class="[ js-product-nav-slider-item-image ]"
+                        src="{{ media.preview_image | image_url: width: 160, height: 160, crop: 'center' }}"
+                        alt="{{ media.preview_image.alt | escape }}"
+                        width="80"
+                        height="80"
+                        loading="lazy"
+                      >
+                    </li>
+                  {% endfor %}
+                </ul>
               </div>
-            {% endif %}
-            <img
-              class="[ js-product-slider-item-image ]"
-              src="{{ media.preview_image | image_url: width: 1080 | image_url: height: 1080, crop: 'center' }}"
-              srcset="
-                {{ media.preview_image | image_url: width: 622 | image_url: height: 622, crop: 'center' }} 622w,
-                {{ media.preview_image | image_url: width: 768 | image_url: height: 768, crop: 'center' }} 768w,
-                {{ media.preview_image | image_url: width: 968 | image_url: height: 968, crop: 'center' }} 968w,
-                {{ media.preview_image | image_url: width: 1080 | image_url: height: 1080, crop: 'center' }} 1080w
-              "
-              alt="{{ media.preview_image.alt | escape }}"
-              data-lightbox-image="{{ media.preview_image | image_url: height: 1080 }}"
-              width="1080"
-              height="1080"
-              loading="lazy"
-            >
+            </section>
           </div>
-        {% endfor %}
-      </div>
-
-      <div class="product-gallery-previous [ js-cursor-previous ]"></div>
-      <div class="product-gallery-next [ js-cursor-next ]"></div>
-      <div class="product-gallery-lightbox [ js-product-lightbox ]" data-tooltip>
-        <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <path d="M19.679 4.005a.899.899 0 00-.8.913v2.05a.899.899 0 101.797 0v-2.05a.899.899 0 00-.997-.913zm-9.635 1.138a.899.899 0 00-.772 1.166l.59 1.994a.902.902 0 001.727-.52l-.59-1.994a.899.899 0 00-.955-.646zm19.27 0a.899.899 0 00-.759.646l-.59 1.994a.902.902 0 001.728.52l.59-1.994a.899.899 0 00-.97-1.166zM1.168 8.88a.899.899 0 00-.675 1.39l1.152 1.784a.9.9 0 101.517-.969L2.01 9.3a.899.899 0 00-.842-.421zm37.092 0a.899.899 0 00-.716.421l-1.152 1.784a.9.9 0 101.517.97l1.152-1.785a.899.899 0 00-.8-1.39zm-18.483 1.419c-8.233 0-15.487 3.715-19.607 9.368a.899.899 0 000 1.053c4.12 5.652 11.374 9.368 19.607 9.368 8.233 0 15.487-3.716 19.607-9.368a.899.899 0 000-1.053c-4.12-5.653-11.374-9.368-19.607-9.368zm0 2.26c4.23 0 7.64 3.41 7.64 7.641 0 4.232-3.41 7.64-7.64 7.64a7.626 7.626 0 01-7.64-7.64c0-4.231 3.41-7.64 7.64-7.64zm-5.87.254a9.44 9.44 0 00-3.568 7.387c0 2.996 1.41 5.655 3.595 7.388-4.92-1.202-9.096-3.873-11.867-7.388 2.765-3.512 6.93-6.18 11.84-7.387zm11.741 0c4.91 1.208 9.074 3.875 11.84 7.387-2.771 3.515-6.948 6.186-11.868 7.388 2.186-1.733 3.595-4.392 3.595-7.388a9.44 9.44 0 00-3.567-7.387z" fill="#000" fill-rule="nonzero" />
-        </svg>
-
-        <svg class="eye-roll" width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <path d="M20.045 12a4.058 4.058 0 014.045 4.045 4.058 4.058 0 01-4.045 4.045A4.058 4.058 0 0116 16.045 4.058 4.058 0 0120.045 12zm0 1.798a2.233 2.233 0 00-2.247 2.247c0 1.252.995 2.247 2.247 2.247a2.233 2.233 0 002.247-2.247 2.233 2.233 0 00-2.247-2.247z" fill="#000" fill-rule="nonzero" />
-        </svg>
-
-        <div class="tooltip">
-          <div class="tooltip__wrap">Click to view full image</div>
         </div>
       </div>
+      <div class="product-gallery-right">
+        <section class="splide" id="main-slider">
+          <div class="splide__track">
+            <ul class="splide__list">
+              {% for media in product.media %}
+                <li class="splide__slide">
+                  {% comment %} if first image {% endcomment %}
+                  {% if forloop.first %}
+                    <div class="product-slider-item-endorsement">
+                      <img src="{{ 'plunket_logo.svg' | asset_url }}" loading="lazy" width="200" height="200">
+                    </div>
+                  {% endif %}
+                  {% comment %} {{ media.preview_image | image_url: width: 160, height: 160, crop: 'center' }} {% endcomment %}
+                  <img
+                    class="[ js-product-slider-item-image ]"
+                    src="{{ media.preview_image | image_url: width: 720, height: 720, crop: 'center' }}"
+                    srcset="
+                      {{ media.preview_image | image_url: width: 622, height: 622, crop: 'center' }} 622w,
+                      {{ media.preview_image | image_url: width: 768, height: 768, crop: 'center' }} 768w,
+                      {{ media.preview_image | image_url: width: 968, height: 968, crop: 'center' }} 968w,
+                      {{ media.preview_image | image_url: width: 720, height: 720, crop: 'center' }} 1080w
+                    "
+                    alt="{{ media.preview_image.alt | escape }}"
+                    data-lightbox-image="{{ media.preview_image | image_url: height: 1080 }}"
+                    width="1080"
+                    height="1080"
+                    loading="lazy"
+                  >
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </section>
 
-      <span class="product-gallery-progress">
-        <span class="product-gallery-progress__bar [ js-gallery-progress ]"></span>
-      </span>
+        {% comment %}
+          <div class="product-slider [ js-product-imagery-slider ]">
+            {% for media in product.media %}
+              <div class="product-slider-item">
+                {% comment %} if first image {% endcomment %}
+                {% if forloop.first %}
+                  <div class="product-slider-item-endorsement">
+                    <img src="{{ 'plunket_logo.svg' | asset_url }}" loading="lazy" width="200" height="200">
+                  </div>
+                {% endif %}
+                <img
+                  class="[ js-product-slider-item-image ]"
+                  src="{{ media.preview_image | image_url: width: 1080 | image_url: height: 1080, crop: 'center' }}"
+                  srcset="
+                    {{ media.preview_image | image_url: width: 622 | image_url: height: 622, crop: 'center' }} 622w,
+                    {{ media.preview_image | image_url: width: 768 | image_url: height: 768, crop: 'center' }} 768w,
+                    {{ media.preview_image | image_url: width: 968 | image_url: height: 968, crop: 'center' }} 968w,
+                    {{ media.preview_image | image_url: width: 1080 | image_url: height: 1080, crop: 'center' }} 1080w
+                  "
+                  alt="{{ media.preview_image.alt | escape }}"
+                  data-lightbox-image="{{ media.preview_image | image_url: height: 1080 }}"
+                  width="1080"
+                  height="1080"
+                  loading="lazy"
+                >
+              </div>
+            {% endfor %}
+          </div>
+        {% endcomment %}
 
-      {% comment %} <span class="product-gallery-progresscircle"> {% endcomment %}
-      {% comment %} <svg width="100" height="100" viewBox="0 0 100 100"> {% endcomment %}
-      {% comment %} <circle class="[ js-gallery-progress-circle ]" stroke-linecap="square" cx="50" cy="50" r="48" stroke="#000" stroke-width="2" fill="none" stroke-dasharray="315" stroke-dashoffset="100" stroke-mitterlimit="0" transform="rotate(-90 ) translate(-100 0)" /> {% endcomment %}
-      {% comment %} </svg> {% endcomment %}
-      {% comment %} </span> {% endcomment %}
-      {% if on_sale %}
-        <span class="product-gallery-sale">SALE</span>
-      {% endif %}
+        {% comment %}
+          <div class="product-gallery-previous [ js-cursor-previous ]"></div>
+          <div class="product-gallery-next [ js-cursor-next ]"></div>
+        {% endcomment %}
+        <div class="product-gallery-lightbox [ js-product-lightbox ]" data-tooltip>
+          <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.679 4.005a.899.899 0 00-.8.913v2.05a.899.899 0 101.797 0v-2.05a.899.899 0 00-.997-.913zm-9.635 1.138a.899.899 0 00-.772 1.166l.59 1.994a.902.902 0 001.727-.52l-.59-1.994a.899.899 0 00-.955-.646zm19.27 0a.899.899 0 00-.759.646l-.59 1.994a.902.902 0 001.728.52l.59-1.994a.899.899 0 00-.97-1.166zM1.168 8.88a.899.899 0 00-.675 1.39l1.152 1.784a.9.9 0 101.517-.969L2.01 9.3a.899.899 0 00-.842-.421zm37.092 0a.899.899 0 00-.716.421l-1.152 1.784a.9.9 0 101.517.97l1.152-1.785a.899.899 0 00-.8-1.39zm-18.483 1.419c-8.233 0-15.487 3.715-19.607 9.368a.899.899 0 000 1.053c4.12 5.652 11.374 9.368 19.607 9.368 8.233 0 15.487-3.716 19.607-9.368a.899.899 0 000-1.053c-4.12-5.653-11.374-9.368-19.607-9.368zm0 2.26c4.23 0 7.64 3.41 7.64 7.641 0 4.232-3.41 7.64-7.64 7.64a7.626 7.626 0 01-7.64-7.64c0-4.231 3.41-7.64 7.64-7.64zm-5.87.254a9.44 9.44 0 00-3.568 7.387c0 2.996 1.41 5.655 3.595 7.388-4.92-1.202-9.096-3.873-11.867-7.388 2.765-3.512 6.93-6.18 11.84-7.387zm11.741 0c4.91 1.208 9.074 3.875 11.84 7.387-2.771 3.515-6.948 6.186-11.868 7.388 2.186-1.733 3.595-4.392 3.595-7.388a9.44 9.44 0 00-3.567-7.387z" fill="#000" fill-rule="nonzero" />
+          </svg>
 
-      <div class="product-nav">
-        <div class="product-nav-slider [ js-product-nav-imagery-slider ]">
-          {% for media in product.media %}
-            <div class="product-nav-slider-item">
-              <img
-                class="[ js-product-nav-slider-item-image ]"
-                src="{{ media.preview_image | image_url: width: 160, height: 160, crop: 'center' }}"
-                alt="{{ media.preview_image.alt | escape }}"
-                width="80"
-                height="80"
-                loading="lazy"
-              >
-            </div>
-          {% endfor %}
+          <svg class="eye-roll" width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.045 12a4.058 4.058 0 014.045 4.045 4.058 4.058 0 01-4.045 4.045A4.058 4.058 0 0116 16.045 4.058 4.058 0 0120.045 12zm0 1.798a2.233 2.233 0 00-2.247 2.247c0 1.252.995 2.247 2.247 2.247a2.233 2.233 0 002.247-2.247 2.233 2.233 0 00-2.247-2.247z" fill="#000" fill-rule="nonzero" />
+          </svg>
+
+          <div class="tooltip">
+            <div class="tooltip__wrap">Click to view full image</div>
+          </div>
         </div>
+
+        <span class="product-gallery-progress">
+          <span class="product-gallery-progress__bar [ js-gallery-progress ]"></span>
+        </span>
+
+        {% if on_sale %}
+          <span class="product-gallery-sale">SALE</span>
+        {% endif %}
       </div>
     </div>
 
@@ -381,29 +422,5 @@
       {{ product.metafields.judgeme.widget }}
     </div>
     <!-- End of Judge.me code -->
-
-    {% comment %}
-      <script type="text/javascript">
-        (function e() {
-          var e = document.createElement('script');
-          (e.type = 'text/javascript'),
-            (e.async = true),
-            (e.src = 'https://staticw2.yotpo.com/JxEyiC9n5SoKqDH4Fb95zCfSuBU0OmI5FIS55jG5/widget.js');
-          var t = document.getElementsByTagName('script')[0];
-          t.parentNode.insertBefore(e, t);
-        })();
-      </script>
-
-      <div
-        class="yotpo yotpo-main-widget"
-        data-product-id="{{ product.id }}"
-        data-name="{{ product.title | escape }}"
-        data-url="{{ shop.url }}{{ product.url }}"
-        data-image-url="{{ product.featured_image | image_url: 'large' | replace: '?', '%3F' | replace: '&', '%26' }}"
-        data-price="{{ variant.price | money_without_currency }}"
-        data-currency="{{ shop.currency }}"
-        data-description="{{ product.description | escape }}"
-      ></div>
-    {% endcomment %}
   </div>
 </div>
