--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -3,7 +3,7 @@
 }
 .product {
     padding: 0 2rem;
-    padding-top: 20rem;
+    padding-top: 10rem;
     padding-bottom: 20rem;
     background: var(--blue-light);
 
@@ -16,7 +16,6 @@
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
-
         max-width: var(--content-width);
     }
 
@@ -44,6 +43,70 @@
             width: 100%;
             overflow: hidden;
 
+            > img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    &-gallery {
+        width: 60%;
+        padding-right: 4rem;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        position: sticky;
+        top: 8rem;
+
+        @include media($md, max) {
+            margin-bottom: 8rem;
+            position: relative;
+            top: 0;
+            width: 100%;
+            padding-right: 0;
+        }
+
+        .splide__pagination {
+            position: absolute;
+            bottom: -4rem;
+
+            li {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+
+                button {
+                    background: #8bb4bc;
+
+                    &.is-active {
+                        background: var(--green);
+                    }
+                }
+
+                &::before {
+                    display: none;
+                }
+            }
+        }
+
+        .splide__slide {
+            .js-product-slider-item-image {
+                width: 100%;
+            }
+
+            list-style: none;
+            padding: 0;
+            margin: 0 auto;
+
+            &::before {
+                display: none;
+            }
+
             .product-slider-item-endorsement {
                 position: absolute;
                 z-index: 3;
@@ -57,27 +120,36 @@
                     height: 100%;
                 }
             }
-
-            > img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
         }
-    }
-
-    &-gallery {
-        width: 50%;
-        padding-right: 4rem;
-        position: relative;
-        margin-bottom: 8rem;
 
         @include media($md, max) {
             width: 100%;
             padding-right: 0;
+        }
+
+        &-left {
+            width: 10rem;
+            position: relative;
+
+            @include media($md, max) {
+                display: none;
+            }
+
+            .product-nav,
+            .product-nav-slider,
+            .splide__list,
+            .splide__track {
+                width: 10rem !important;
+                height: 100% !important;
+            }
+        }
+
+        &-right {
+            width: calc(100% - 10rem);
+
+            @include media($md, max) {
+                width: 100%;
+            }
         }
 
         &-sale {
@@ -110,6 +182,7 @@
             width: 5rem;
 
             svg {
+                pointer-events: none;
                 path {
                     fill: var(--green);
                 }
@@ -162,17 +235,22 @@
     }
 
     &-details {
-        width: 50%;
+        width: 40%;
         padding-left: 4rem;
         padding-top: 6rem;
         position: relative;
+
+        @include media($md, max) {
+            width: 100%;
+            padding-top: 0;
+        }
 
         &-price {
             position: relative;
 
             .jdgm-widget {
                 position: absolute;
-                left: 12rem;
+                left: 13rem;
                 top: 1.2rem;
             }
         }
@@ -756,29 +834,9 @@ html {
     }
 }
 
-.product-nav {
-    position: absolute;
-    height: 8rem;
-    top: 100%;
-    margin-top: 2rem;
-    left: 0;
-    right: 0;
-
-    .product-nav-slider-item {
-        position: relative;
-        width: 8rem;
-        padding: 0.5rem;
-    }
-
-    img {
-        transition: all 0.2s ease-in-out;
-    }
-
-    .is-selected img {
-        outline: 2px solid #ec5b44;
-    }
-}
-
 .jdgm-rev-widg__title {
     font-weight: 700;
+}
+.splide__track--nav > .splide__list > .splide__slide.is-active {
+    border: 2px solid var(--green);
 }
