--- a/source/style.scss
+++ b/source/style.scss
@@ -14,6 +14,7 @@ Base includes
 ------------------------------------------------------------------*/
 
 @import 'sections/flickity';
+@import 'sections/splide';
 @import 'sections/header';
 @import 'sections/choices';
 @import 'sections/footer';
@@ -48,3 +49,4 @@ Base includes
 @import 'sections/mega';  
 @import 'sections/password';  
 @import 'sections/quick-view';  
+@import 'sections/benefits';  
