--- a/source/style.scss
+++ b/source/style.scss
@@ -50,3 +50,4 @@ Base includes
 @import 'sections/password';  
 @import 'sections/quick-view';  
 @import 'sections/benefits';  
+@import 'sections/steps';  
