--- a/sections/steps-block.liquid
+++ b/sections/steps-block.liquid
@@ -19,14 +19,14 @@
   </div>
   <div class="steps__grid">
     {%- for block in section.blocks -%}
-      <div class="steps__item">
+      <div class="steps__item [ js-inview ]">
         <div class="steps__item__image">
-          {{ block.settings.article.image | image_url: width: 760 | image_url: height: 900 | image_tag }}
+          {{ block.settings.image | image_url: width: 760 | image_url: height: 900 | image_tag }}
         </div>
         <div class="steps__item__text">
-          <h6>
-            <b>{{ block.settings.article.title }}</b>
-          </h6>
+          <h5>
+            <b>{{ block.settings.title }}</b>
+          </h5>
         </div>
       </div>
     {%- endfor -%}
