--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -149,21 +149,6 @@
         <!-- End of Judge.me code -->
       </div>
 
-      <div
-        class="wizup-app sg-slider sg-floatingpop"
-        data-shopname="vital-bits.myshopify.com"
-        data-widgettype="reels"
-        data-templatename="index"
-      ></div>
-      <div
-        class="wizup-app sg-slider sg-floatingpop"
-        data-shopname="vital-bits.myshopify.com"
-        data-widgettype="reels"
-        data-productid="{{ product.id }}"
-        data-collectionid="{{ collection.id }}"
-        data-templatename="{{ template.name }}"
-      ></div>
-
       <afterpay-placement
         data-modal-link-style="circled-question-icon"
         data-size="xs"
@@ -174,6 +159,39 @@
         data-currency="NZD"
         data-amount="{{ product.price | money_without_currency }}"
       ></afterpay-placement>
+
+      {% if product.metafields.custom.feature_icon_1 %}
+        <div class="product-features">
+          {% if product.metafields.custom.feature_icon_1 %}
+            <div class="product-features__item">
+              <img
+                src="{{ product.metafields.custom.feature_icon_1 | file_url  }}"
+                alt="{{ product.metafields.custom.feature_title_1 | escape }}"
+              >
+              <p>{{ product.metafields.custom.feature_title_1 }}</p>
+            </div>
+          {% endif %}
+           {% if product.metafields.custom.feature_icon_2 %}
+            <div class="product-features__item">
+              <img
+                src="{{ product.metafields.custom.feature_icon_2 | file_url  }}"
+                alt="{{ product.metafields.custom.feature_title_2 | escape }}"
+              >
+              <p>{{ product.metafields.custom.feature_title_2 }}</p>
+            </div>
+          {% endif %}
+           {% if product.metafields.custom.feature_icon_3 %}
+            <div class="product-features__item">
+              <img
+                src="{{ product.metafields.custom.feature_icon_3 | file_url  }}"
+                alt="{{ product.metafields.custom.feature_title_3 | escape }}"
+              >
+              <p>{{ product.metafields.custom.feature_title_3 }}</p>
+            </div>
+          {% endif %}
+
+        </div>
+      {% endif %}
 
       {% form 'product', product, novalidate: 'novalidate', data-product-form: '' %}
         <div class="product-actions">
@@ -210,7 +228,16 @@
           {% endfor %}
         </select>
       {% endform %}
-
+      <div class="wiz">
+        <div
+          class="wizup-app sg-slider sg-floatingpop"
+          data-shopname="vital-bits.myshopify.com"
+          data-widgettype="reels"
+          data-productid="{{ product.id }}"
+          data-collectionid="{{ collection.id }}"
+          data-templatename="{{ template.name }}"
+        ></div>
+      </div>
       {%- if product.description != blank -%}
         <p>
           {{ product.description }}
